--- a/resources/sass/object/component/c-auth.scss
+++ b/resources/sass/object/component/c-auth.scss
@@ -143,7 +143,7 @@
   -webkit-appearance: none;
   width: 150px;
   @include mq() {
-    padding: $space_2l 0 3px 0;
+    padding: $space_2l 0 3px $space_m;
     font-size: $font_sp-s;
     width: 100px;
   }
