--- a/resources/sass/object/component/c-profile.scss
+++ b/resources/sass/object/component/c-profile.scss
@@ -52,6 +52,7 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .c-profile__create-btn {
+  border-radius: 0;
   align-items: center;
   background: $theme_yellow;
   border: 0;
@@ -64,6 +65,7 @@
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   width: 100%;
+  -webkit-appearance: none;
 }
 
 .c-profile__logo {
