--- a/resources/sass/object/component/c-search-tab.scss
+++ b/resources/sass/object/component/c-search-tab.scss
@@ -81,9 +81,11 @@
   padding: $space_s;
   width: 100px;
   text-align: right;
+  height: 30px;
   @include mq() {
     font-size: $font_sp-m;
     width: 20%;
+    height: 25px;
   }
 }
 
