new laravel project

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1180,6 +1180,7 @@ select:-moz-focusring {
   .c-search-tab__input-for-price {
     font-size: 12px;
     height: 25px;
+    margin-bottom: 2px 0 3px 0;
     width: 20%;
   }
 }
