--- a/resources/sass/object/component/c-auth.scss
+++ b/resources/sass/object/component/c-auth.scss
@@ -56,6 +56,7 @@
   font-size: $font_m;
   padding: $space_l 0;
   width: 400px;
+  -webkit-appearance: none;
   @include mq() {
     font-size: $font_sp-s;
     padding: 18px 0 $space_s $space_m;
