--- a/public/css/app.css
+++ b/public/css/app.css
@@ -378,11 +378,13 @@ select:-moz-focusring {
 }
 
 .c-auth__input {
+  border: none;
   background: #F8FAFC;
   color: #757575;
   font-size: 18px;
   padding: 15px 0;
   width: 400px;
+  -webkit-border-radius: 0px;
 }
 
 @media screen and (max-width: 550px) {
