--- a/resources/sass/object/component/c-auth.scss
+++ b/resources/sass/object/component/c-auth.scss
@@ -51,14 +51,13 @@
 
 .c-auth__input {
   border: none;
-
   background: $theme_gray_background;
   color: $theme_dark_gray;
   font-size: $font_m;
   padding: $space_l 0;
   width: 400px;
-  -webkit-border-radius: 0px;
-
+  // -webkit-border-radius: 0px;
+   -webkit-appearance: none;
   @include mq() {
     font-size: $font_sp-s;
     padding: 18px 0 $space_s $space_m;
