--- a/resources/sass/object/component/c-mypage.scss
+++ b/resources/sass/object/component/c-mypage.scss
@@ -81,7 +81,7 @@
   text-align: center;
   width: 250px;
   @include mq(){
-    padding-top: $space_m;
+    padding-top: $space_s;
     width: 65%;
     font-weight: bold;
   }
@@ -150,7 +150,7 @@
   width:100%;
   white-space:nowrap;
   @include mq(){
-    padding: 0 0 $space_s 0;
+    padding: 0 0 2px 0;
     color: $theme_gray;
     font-size: $font_sp-m;
   }
@@ -162,7 +162,7 @@
   justify-content: space-around;
   margin-top: $space_m;
   @include mq(){
-    margin-top: $space_s;
+    margin-top: 2px;
     width: 100%;
   }
 }
@@ -182,8 +182,9 @@
   margin: 0;
   width: 150px;
   @include mq(){
-    height: $space_2xl;
-    line-height: $space_2xl;
+    font-size: $font_sp-s;
+    height: $space_2l;
+    line-height: $space_2l;
   }
 }
 .c-mypage-box__company-btn{
