--- a/public/css/app.css
+++ b/public/css/app.css
@@ -672,16 +672,16 @@ select:-moz-focusring {
 }
 
 .c-mypage-box__info {
-  padding-top: 20px;
+  padding-top: 10px;
   text-align: center;
   width: 250px;
 }
 
 @media screen and (max-width: 550px) {
   .c-mypage-box__info {
+    font-weight: bold;
     padding-top: 5px;
     width: 65%;
-    font-weight: bold;
   }
 }
 
@@ -748,18 +748,18 @@ select:-moz-focusring {
   }
 }
 
-.c-mypage-box__item-for-expiration {
+.c-mypage-box__item-for-date {
   box-sizing: border-box;
   overflow: hidden;
-  padding: 5px;
+  padding-bottom: 5px;
   text-overflow: ellipsis;
   width: 100%;
   white-space: nowrap;
 }
 
 @media screen and (max-width: 550px) {
-  .c-mypage-box__item-for-expiration {
-    padding: 0 0 2px 0;
+  .c-mypage-box__item-for-date {
+    padding-bottom: 2px;
     color: #808080;
     font-size: 12px;
   }
@@ -769,7 +769,7 @@ select:-moz-focusring {
   align-items: center;
   display: flex;
   justify-content: space-around;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 @media screen and (max-width: 550px) {
@@ -967,7 +967,7 @@ select:-moz-focusring {
 @media screen and (max-width: 550px) {
   .c-profile__label {
     text-align: center;
-    width: 115px;
+    width: 100px;
   }
 }
 
