new laravel project

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1085,7 +1085,7 @@ select:-moz-focusring {
   pointer-events: none;
   position: absolute;
   padding: 0;
-  top: 17px;
+  bottom: 17px;
   right: 13px;
   width: 0;
 }
