--- a/resources/sass/object/component/c-profile.scss
+++ b/resources/sass/object/component/c-profile.scss
@@ -132,10 +132,10 @@
 	pointer-events: none;
   position: absolute;
   padding: 0;
-  // top: 17px;
-  bottom: 17px;
+  top: 17px;
   right: 13px;
   width: 0;
+  pointer-events: none;
   @include mq(){
     left: 57px;
   }
