new laravel project

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1333,6 +1333,7 @@ select:-moz-focusring {
   content: "";
   height: 0;
   position: absolute;
+  pointer-events: none;
   padding: 0;
   pointer-events: none;
   right: 14px;
