--- a/resources/sass/object/component/c-search-tab.scss
+++ b/resources/sass/object/component/c-search-tab.scss
@@ -187,6 +187,7 @@
   content: '';
   height: 0;
   position: absolute;
+  pointer-events: none;
   padding: 0;
 	pointer-events: none;
   right: 14px;
