--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1493,7 +1493,7 @@ select:-moz-focusring {
   -o-object-fit: cover;
      object-fit: cover;
   height: 200px;
-  width: 200px;
+  width: 198x;
 }
 
 @media screen and (max-width: 550px) {
