--- a/resources/sass/object/component/c-product-list.scss
+++ b/resources/sass/object/component/c-product-list.scss
@@ -62,7 +62,7 @@
 .c-product-list__img {
   object-fit: cover;
   height: 200px;
-  width: 200px;
+  width: 198x;
   @include mq() {
     width: 100%;
     height: 100px;
