--- a/resources/sass/object/component/c-mypage.scss
+++ b/resources/sass/object/component/c-mypage.scss
@@ -8,13 +8,6 @@
   }
 }
 
-.c-price-red {
-  color: $theme_red;
-}
-.c-price-line {
-  color: $theme_gray;
-  text-decoration: line-through;
-}
 
 .c-mypage-container__title-box {
   box-sizing: border-box;
@@ -170,6 +163,17 @@
     width: 100%;
   }
 }
+.c-mypage-box__user-btn-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  margin-top: $space_s;
+  @include mq(){
+    justify-content: flex-start;
+    margin-top: 2px;
+    width: 100%;
+  }
+}
 
 .c-mypage-box__btn {
   border: none;
@@ -204,6 +208,7 @@
 .c-mypage-box__user-sp-size-btn{
   @include mq(){
     width: 50%;
+    margin-right: 5%;
   }
 }
 
@@ -254,4 +259,12 @@
 .c-mypage-small-container__btn-logo {
   color: $theme_gray;
   position:absolute;
+}
+
+.c-mypage__price-red {
+  color: $theme_red;
+}
+.c-mypage__price-line {
+  color: $theme_gray;
+  text-decoration: line-through;
 }
